Add instructions